--- a/index.html
+++ b/index.html
@@ -3,9 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header>
+      <nav>
+        <div class="left-section">
+          <img src="img_sourse/Vector.png" alt="miro_title" />
+          <ul>
+            <li><h4>Продукт</h4></li>
+            <li><h4>Решения</h4></li>
+            <li><h4>Ресурсы</h4></li>
+            <li><h4>Предприятия</h4></li>
+            <li><h4>Тарифы</h4></li>
+          </ul>
+        </div>
+        <div class="right-section">
+          <img src="img_sourse/Frame.png" alt="planet" />
+          <a href="#" class="nav_btn">Регистрация</a>
+        </div>
+      </nav>
+      <div class="header-main">
+        <div class="left-section-header-main">
+          <h2 class="font1">Место для командной работы</h2>
+          <h3 class="font2">
+            Интерактивная онлайн-доска для совместной работы команд — в любое
+            время, в любом месте.
+          </h3>
+          <input type="text" class="start-free-input" />
+          <a href="#" class="start-free font2">Начать бесплатно</a>
+          <h5>Всегда бесплатно — кредитная карта не нужна</h5>
+          <h4 class="font2">45M+ пользователей</h4>
+          <img src="img_sourse/IMAGE.png" alt="" />
+          <img src="img_sourse/IMAGE (1).png" alt="" />
+          <img src="img_sourse/IMAGE (2).png" alt="" />
+          <img src="img_sourse/IMAGE (3).png" alt="" />
+        </div>
+        <div class="right-section-header-main">
+          <img
+            src="img_sourse/headerimage-without-text 1.png"
+            alt="демонстрация"
+            class="right-section-header-main-img"
+          />
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="main">
+        <div class="left-section-main">
+          <h2 class="font1">Работайте вместе, где бы вы ни находились</h2>
+          <h4 class="font2">
+            Работая в офисе, удалённо или в гибридном формате, с Miro ваша
+            команда может общаться, сотрудничать и совместно заниматься
+            творчеством в одном пространстве, из любой точки мира.
+          </h4>
+          <a href="#" class="font2 know-more">Узнать больше</a>
+        </div>
+        <div class="right-section-main">
+          <img src="img_sourse/IMAGE (4).png" alt="демонстрация" />
+        </div>
+      </div>
+      <div class="main2">
+        <div class="">
+          <img src="img_sourse/IMAGE (5).png" alt="демонстрация" />
+        </div>
+        <div class="right-section-main2">
+          <h2 class="font1">Закройте лишние вкладки — всё уже здесь</h2>
+          <h4 class="font2">
+            Редактируете ли вы документы в Google Docs, работаете над задачами в
+            Jira или созваниваетесь в Zoom, Miro предлагает более 100 интеграций
+            с уже известными и полюбившимися вам инструментами.
+          </h4>
+          <a href="#" class="font2 know-more">Узнать больше</a>
+        </div>
+      </div>
+      <article>
+        <h2 class="font1">Подходит для вашего стиля работы</h2>
+        <div class="list">
+          <h3 class="font3">Мозговые штурмы</h3>
+          <h3 class="font3">Диаграммы</h3>
+          <h3 class="font3">Встречи</h3>
+          <h3 class="font3">SCRUM</h3>
+          <h3 class="font3">Картирование</h3>
+          <h3 class="font3">Дизайн-исследования</h3>
+          <h3 class="font3">Планирование</h3>
+        </div>
+      </article>
+      <div class="main3">
+        <div class="left-section-main">
+          <h4 class="font2">
+            Мозговой штурм<br /><br />Генерируйте творческие идеи и развивайте
+            их с помощью стикеров, изображений, интеллект-карт, видео, рисования
+            и не только.
+          </h4>
+          <a href="#" class="font2 know-more">Узнать больше</a>
+        </div>
+        <div class="right-section-main">
+          <img src="img_sourse/IMAGE (6).png" alt="демонстрация" />
+        </div>
+      </div>
+      <article>
+        <h2 class="font1">Создан для всех типов команд</h2>
+        <div class="list">
+          <h3 class="font3">UX и дизайн</h3>
+          <h3 class="font3">Маркетинг</h3>
+          <h3 class="font3">Управление продуктом</h3>
+          <h3 class="font3">Разработка</h3>
+          <h3 class="font3">Консалтинг</h3>
+          <h3 class="font3">Agile-коучинг</h3>
+          <h3 class="font3">Продажи</h3>
+        </div>
+      </article>
+      <div class="main3">
+        <div class="left-section-main">
+          <h4 class="font2">
+            Создавайте вайрфреймы<br /><br />Подключайте заказчиков к процессу
+            дизайна <br /><br />Проводите вовлекающие дизайн-воркшопы
+          </h4>
+          <a href="#" class="font2 know-more">Узнать больше</a>
+          <h4 class="font2">Интегрируйте ваши любимые инструменты</h4>
+          <img src="img_sourse/Vector (1).png" alt="" />
+          <img src="img_sourse/Снимок экрана 2024-04-12 185102.png" alt="" />
+          <img src="img_sourse/Vector (2).png" alt="" />
+          <img src="img_sourse/Vector (3).png" alt="" />
+        </div>
+        <div class="right-section-main">
+          <img src="img_sourse/IMAGE (7).png" alt="демонстрация" />
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
