--- a/index.html
+++ b/index.html
@@ -132,6 +132,45 @@
           <img src="img_sourse/IMAGE (7).png" alt="демонстрация" />
         </div>
       </div>
+      <div class="statistik">
+        <h2>Почему и крупные, и небольшие компании доверяют Miro</h2>
+        <a href="#">Связаться с отделом продаж</a>
+        <div class="block-wraper">
+          <div class="block">
+            <img src="img_sourse/IMAGE (8).png" alt="" />
+            <h3 class="font2">
+              Miro cоответствует требованиям безопасности корпоративного уровня,
+              согласно стандарту ISO-27001
+            </h3>
+          </div>
+          <div class="block">
+            <img src="img_sourse/IMAGE (9).png" alt="" />
+            <h3 class="font2">
+              Платформа номер 1 для совместной работы, согласно отзывам на G2
+            </h3>
+          </div>
+          <div class="block">
+            <img src="img_sourse/IMAGE (10).png" alt="" />
+            <h3 class="font2">
+              Почти все компании из списка Fortune 100 используют Miro
+            </h3>
+          </div>
+          <div class="block">
+            <img src="img_sourse/IMAGE (11).png" alt="" />
+            <h3 class="font2">шаблонов, созданных сообществом и экспертами</h3>
+          </div>
+          <div class="block">
+            <img src="img_sourse/IMAGE (12).png" alt="" />
+            <h3 class="font2">пользователей во всём мире</h3>
+          </div>
+          <div class="block">
+            <img src="img_sourse/IMAGE (13).png" alt="" />
+            <h3 class="font2">
+              интеграций с различными онлайн-сервисами и инструментами
+            </h3>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
