--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="statistik">
         <h2>Почему и крупные, и небольшие компании доверяют Miro</h2>
         <a href="#">Связаться с отделом продаж</a>
-        <div class="block-wraper">
+        <div class=".container1">
           <div class="block">
             <img src="img_sourse/IMAGE (8).png" alt="" />
             <h3 class="font2">
@@ -155,6 +155,8 @@
               Почти все компании из списка Fortune 100 используют Miro
             </h3>
           </div>
+        </div>
+        <div class="container2">
           <div class="block">
             <img src="img_sourse/IMAGE (11).png" alt="" />
             <h3 class="font2">шаблонов, созданных сообществом и экспертами</h3>
