--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="left-section">
           <img src="img_sourse/Vector.png" alt="miro_title" />
           <ul>
-            <li><h4>Продукт</h4></li>
-            <li><h4>Решения</h4></li>
-            <li><h4>Ресурсы</h4></li>
-            <li><h4>Предприятия</h4></li>
-            <li><h4>Тарифы</h4></li>
+            <li><h4 class="font2">Продукт</h4></li>
+            <li><h4 class="font2">Решения</h4></li>
+            <li><h4 class="font2">Ресурсы</h4></li>
+            <li><h4 class="font2">Предприятия</h4></li>
+            <li><h4 class="font2">Тарифы</h4></li>
           </ul>
         </div>
         <div class="right-section">
           <img src="img_sourse/Frame.png" alt="planet" />
-          <a href="#" class="nav_btn">Регистрация</a>
+          <a href="#" class="nav_btn font6">Регистрация</a>
         </div>
       </nav>
       <div class="header-main">
@@ -33,12 +33,16 @@
           </h3>
           <input type="text" class="start-free-input" />
           <a href="#" class="start-free font2">Начать бесплатно</a>
-          <h5>Всегда бесплатно — кредитная карта не нужна</h5>
-          <h4 class="font2">45M+ пользователей</h4>
-          <img src="img_sourse/IMAGE.png" alt="" />
-          <img src="img_sourse/IMAGE (1).png" alt="" />
-          <img src="img_sourse/IMAGE (2).png" alt="" />
-          <img src="img_sourse/IMAGE (3).png" alt="" />
+          <h5 class="font5">Всегда бесплатно — кредитная карта не нужна</h5>
+          <div class="img-wrapper">
+            <h4 class="font2">45M+ пользователей</h4>
+            <div>
+              <img src="img_sourse/IMAGE.png" alt="" />
+              <img src="img_sourse/IMAGE (1).png" alt="" />
+              <img src="img_sourse/IMAGE (2).png" alt="" />
+              <img src="img_sourse/IMAGE (3).png" alt="" />
+            </div>
+          </div>
         </div>
         <div class="right-section-header-main">
           <img
@@ -133,9 +137,11 @@
         </div>
       </div>
       <div class="statistik">
-        <h2>Почему и крупные, и небольшие компании доверяют Miro</h2>
-        <a href="#">Связаться с отделом продаж</a>
-        <div class=".container1">
+        <h2 class="font4">
+          Почему и крупные, и <br />небольшие компании <br />доверяют Miro
+        </h2>
+        <a href="#" class="know-more-pon font2">Связаться с отделом продаж</a>
+        <div class="container1">
           <div class="block">
             <img src="img_sourse/IMAGE (8).png" alt="" />
             <h3 class="font2">
@@ -173,8 +179,103 @@
           </div>
         </div>
       </div>
+      <div class="statistik2">
+        <h2 class="font1 margin">Нравится лучшим командам мира</h2>
+        <a href="#" class="know-more-pon-pon font2">Все истории клиентов</a>
+        <div class="container1-5">
+          <div class="block2">
+            <img
+              class="company-name-img"
+              src="img_sourse/IMAGE (17).png"
+              alt=""
+            />
+            <h3 class="font5">
+              «Когда пришла пандемия, мы беспокоились, что креативность и
+              продуктивность команды пострадает, так как многие из нас привыкли
+              работать в одной комнате. Но Miro оказался идеальным инструментом
+              для совместной работы в удаленном режиме».
+            </h3>
+            <div class="pod-block">
+              <img src="img_sourse/IMAGE (14).png" alt="" />
+              <div class="description">
+                <h3 class="font5">Роксанна Мустафа</h3>
+                <h3 class="font5">Design Team Lead в VMware</h3>
+              </div>
+            </div>
+          </div>
+          <div class="block2">
+            <img
+              class="company-name-img"
+              src="img_sourse/IMAGE (18).png"
+              alt=""
+            />
+            <h3 class="font5">
+              «Miro помогает решить проблему, связанную с основным пробелом в
+              проектировании изделий: позволяет управлять задачами с участием
+              проектировщиков изделий, проекты которых реализуются с помощью
+              разных инструментов.»
+            </h3>
+            <div class="pod-block">
+              <img src="img_sourse/IMAGE (15).png" alt="" />
+              <div class="description">
+                <h3 class="font5">Джейн Эшли</h3>
+                <h3 class="font5">Директор по проектированию DocuSign</h3>
+              </div>
+            </div>
+          </div>
+          <div class="block2">
+            <img
+              class="company-name-img"
+              src="img_sourse/IMAGE (19).png"
+              alt=""
+            />
+            <h3 class="font5">
+              «Когда мы начали использовать Miro, скептицизм сменился верой в
+              инновации, теперь у нас есть инструмент, который лежит в основе
+              любой работы, и мы продолжим использовать его и в будущем».
+            </h3>
+            <div class="pod-block">
+              <img src="img_sourse/IMAGE (16).png" alt="" />
+              <div class="description">
+                <h3 class="font5">Лора Бейрд</h3>
+                <h3 class="font5">Associate Design Director в frog</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="lol">
+        <div class="conect-to-miro">
+          <h3 class="font1 text-white">
+            Присоединяйтесь к 45M <br />
+            миллионам пользователей <br />
+            уже сегодня
+          </h3>
+          <a href="#" class="font2"
+            >Начните бесплатно и перейдите на другой тариф в любое <br />
+            время. Хотите стать корпоративным клиентом?<br /><span
+              >Свяжитесь с отделом продаж</span
+            ></a
+          >
+          <a href="#" class="register font2">Зарегистрироваться</a>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <img src="img_sourse/Frame (1).png" alt="" />
+      <img src="img_sourse/Frame (2).png" alt="" />
+      <img src="img_sourse/Frame (3).png" alt="" />
+      <img src="img_sourse/Frame (4).png" alt="" />
+      <img src="img_sourse/Frame (5).png" alt="" />
+      <h3 class="font2 text-white">©2023 Miro</h3>
+      <h3 class="font2 text-white">Условия пользования</h3>
+      <h3 class="font2 text-white">Политика конфиденциальности</h3>
+      <h3 class="font2 text-white">Управление файлами cookies</h3>
+      <br />
+      <img src="img_sourse/Frame (6).png" class="additional-images" alt="" />
+      <img src="img_sourse/Frame (7).png" class="additional-images" alt="" />
+      <img src="img_sourse/Frame (8).png" class="additional-images" alt="" />
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
